Added buttons to work with the game logic

--- a/blackjack.html
+++ b/blackjack.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="blackjack.js"></script>
+    <title>Document</title>    
 </head>
 <body>
-    
+    <h1 id="title">Hello Player!</h1>
+    <h2>by Hector Vega</h2>
+    <p id="text-area">Welcome to Blackjack</p>
+    <!-- <button id="ok-button">Ok!</button> -->
+    <button id="new-game-button">New Game!</button>
+    <button id="hit-button">Hit!</button>
+    <button id="stay-button">Stay...</button>
+
+
+    <script src="blackjack.js"></script>
 </body>
 </html>
