Logic for winning added

--- a/blackjack.html
+++ b/blackjack.html
@@ -9,12 +9,11 @@
 <body>
     <h1 id="title">Hello Player!</h1>
     <h2>by Hector Vega</h2>
-    <p id="text-area">Welcome to Blackjack</p>
-    <!-- <button id="ok-button">Ok!</button> -->
+    
+    <p id="text-area">Welcome to Blackjack!</p>
     <button id="new-game-button">New Game!</button>
     <button id="hit-button">Hit!</button>
     <button id="stay-button">Stay...</button>
-
 
     <script src="blackjack.js"></script>
 </body>
